--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <ul>
                     <li>ESTUDIANTES</li>
                     <li>MATERIAS</li>
+                    <li>HORARIOS</li>
                 </ul>
             </nav>
         </header>
