--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <li>ESTUDIANTES</li>
                     <li>MATERIAS</li>
                     <li>HORARIOS</li>
+                    <li>CALIFICACIONES</li>
                 </ul>
             </nav>
         </header>
