--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <h1>
             SITIO EN CONSTRUCCION
         </h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqct8Mm0Nv44v1MlDODE_zA5xDj7l1X_AjPg&usqp=CAU">
         <p>Copyright Todos los derechos reservados</p>
 	</body>
 	</html>
